# dxf2gcode

./: .gitignore  README.md  pyproject.toml  setup.cfg
dxf2gcode/: __init__.py
dxf2gcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dxf2gcode/core/: __init__.py  config.py  dxf_parser.py  gcode_generator.py
example/: test.dxf  test.gcode  test.py
