[metadata]
name = dxf2gcode
version = 0.1.4
author = Yankai Nie
author_email = nieyankai@a3tech.cn
description = A core library for converting DXF files to G-code
long_description = file: README.md
long_description_content_type = text/markdown
# 分类标签（帮助PyPI索引，便于用户搜索）
classifiers =
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Manufacturing
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ezdxf>=1.1.3

[options.package_data]
